--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -15,8 +15,8 @@ footer{
 	text-indent: 0;
 }
 
-[epub|type~="z3998:letter"]:has(> header) > p:nth-of-type(2){
-	margin-top: 1em;
+[epub|type~="z3998:letter"] > header + p{
+	margin-bottom: 1em;
 }
 
 [epub|type~="z3998:sender"],
